--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
+*.log
+
+# Android Studio captures folder
+captures/
+
+# Intellij
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/*
+.idea/**/*
+!.idea/codeStyles
+!.idea/codeStyles/*
+!.idea/copyright
+!.idea/copyright/*
+
+# MacOS folder properties
+*.DS_STORE
